--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.0",
     "react-i18next": "^11.8.5",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "redux-devtools": "^3.7.0",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
@@ -47,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.15",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
     "eslint-config-prettier": "^7.1.0",
